<resources>
    <string name="app_name">Relay</string>

    <!-- Navigation and Actionbar -->
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sync_manual">Sync manual</string>


    <!-- Titles on action bar when changing fragments -->
    <string name="title_activity_main">RELAY</string>
    <string name="title_connection_fragment">Connections</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="title_home_fragment">Inbox</string>
    <string name="title_profile_fragment">Profile info</string>


    <!-- Preference keys -->
    <string name="key_enable_wifi">WIFI enable</string>
    <string name="key_enable_bluetooth">Bluetooth enable</string>
    <string name="key_enable_data">Mobile data enable</string>

    <!-- Preference details -->
    <string name="preference_connection_category">Connection setting</string>
    <string name="preference_wifi_title">WIFI enable</string>
    <string name="preference_wifi_summary">When wifi available, connect and sync with relay server (recommended)</string>
    <string name="preference_bluetooth_title">Bluetooth enable</string>
    <string name="preference_bluetooth_summary">Allow connecting and sharing data between devices automatically (recommended)</string>
    <string name="preference_data_title">Mobile data enable</string>
    <string name="preference_data_summary">When there\'s no wifi available, connect and sync with relay server using mobile data</string>
    <string name="action_user_info">User info</string>
    <string name="action_delete_conversation">Delete conversation</string>

    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About relay</string>
    <string name="large_text">
        "The relay project.\n\n"

        "In the last two decades the Internet has become an essential means of communication between"
        "people and communities around the world. The Internet helps us to connect with each other,"
        "to share knowledge and thereby facilitates the improvement and innovation of education,"
        "health and economy. Despite the exponentially growing rate of internet penetration more "
        "than 50 per cent of the world population still doesn’t have access to the Internet.\n\n"
        "One of the main obstacles to internet access is poverty, most of the world’s developing"
        "countries cannot afford to build the Internet infrastructure. Wireless Internet solutions"
        "without proper infrastructure are expensive. This creates a reality in which people living "
        "in rural areas of the developing world, who already have limited resources, also have no"
        "access to the Internet.\n\n"
        "The primary objective of this project is to provide a simple and low cost solution for this"
        "complex problem by creating an application that provides network infrastructure via mobile"
        "devices to users who live in remote locations where there is limited or no access to the"
        "internet.\n\n"
        "Who are we \n\n"
        "We are two Software Engineering students from "AFEKA academic college of engineering" based in Tel-Aviv.\n\n"
        "contact us if you want to join our revolution:"
        "elomer@gmail.com, Github: omerel\n"
        "barrinbar@gmail.com, Github: barrinbar"



    </string>
    <string name="action_settings">Settings</string>


</resources>
