<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preference_connection_category">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/key_enable_bluetooth"
            android:title="@string/preference_bluetooth_title"
            android:summary="@string/preference_bluetooth_summary"
            android:defaultValue="false" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/key_enable_wifi"
            android:title="@string/preference_wifi_title"
            android:summary="@string/preference_wifi_summary"
            android:defaultValue="false" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/key_enable_data"
            android:title="@string/preference_data_title"
            android:summary="@string/preference_data_summary"
            android:defaultValue="false" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>